fix: block with a blurr to the page

--- a/src/components/content/_content.scss
+++ b/src/components/content/_content.scss
@@ -77,6 +77,16 @@
 		}
 	}
 
+	@media (max-width: 530px) {
+		&__main {
+			display: block;
+		}
+
+		&__title {
+			padding-top: 2rem;
+		}
+	}
+
 	@media (max-width: 480px) {
 		&__title {
 			font-size: 2.5rem;
