--- a/src/components/trailer-img/_trailerImg.scss
+++ b/src/components/trailer-img/_trailerImg.scss
@@ -1,11 +1,16 @@
 .trailer {
 	transition: background-image 0.5s ease-in-out;
 	height: 27.7rem;
+	background-size: cover;
 	background-position: center;
 	border: 1px solid rgba(255, 255, 255, 0.48);
 	border-right: none;
 	border-left: none;
 	box-shadow: 0px 0.4rem 0.4rem 0px rgba(0, 0, 0, 0.25);
+
+	@media (max-width: 900px) {
+		height: 22.7rem;
+	}
 
 	&__wrapper {
 		height: 100%;
@@ -37,9 +42,4 @@
 		font-weight: 900;
 		letter-spacing: 0.216rem;
 	}
-
-	// &:hover ~ &__text {
-	// 	transform: scale(1.2);
-	// 	transition: all 0.3s;
-	// }
 }
