--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -27,14 +27,14 @@
 }
 
 .page-content {
-	margin: 0 8.6rem 0;
+	padding: 0 8.6rem 0;
 
 	@media (max-width: 800px) {
-		margin: 0 3.8rem 0;
+		padding: 0 3.8rem 0;
 	}
 
 	@media (max-width: 480px) {
-		margin: 0 2.8rem 0;
+		padding: 0 2.8rem 0;
 	}
 }
 
