--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -13,7 +13,7 @@
 
 		@media (max-width: 530px) {
 			background-position: top;
-			background-size: auto 50%;
+			background-size: auto 53%;
 		}
 
 		&:after {
@@ -42,15 +42,23 @@
 		}
 
 		@media (max-width: 530px) {
+		}
+
+		@media (max-width: 530px) {
+			z-index: 2;
 			top: 230px;
-		}
-
-		@media (max-width: 500px) {
-			margin-top: 2.2rem;
-		}
-
-		@media (max-width: 300px) {
-			margin-top: 4.2rem;
+			bottom: 0;
+			height: 70%;
+			padding-bottom: 20px;
+			margin-top: 0;
+			border-radius: 13px 14px 0px 0px;
+			background: linear-gradient(
+				180deg,
+				rgba(73, 0, 0, 0.25) 0%,
+				#0a0a0a 100%
+			);
+			background-position: bottom;
+			backdrop-filter: blur(5px);
 		}
 	}
 
@@ -65,24 +73,5 @@
 	&-open {
 		overflow: hidden;
 		height: 100%;
-	}
-
-	&__blur {
-		@media (max-width: 530px) {
-			position: fixed;
-			z-index: 1;
-			bottom: 0;
-
-			width: 100%;
-			height: 60%;
-			border-radius: 13px 14px 0px 0px;
-			background: linear-gradient(
-				180deg,
-				rgba(73, 0, 0, 0.25) 0%,
-				#0a0a0a 100%
-			);
-			background-position: bottom;
-			backdrop-filter: blur(5px);
-		}
 	}
 }
